clusters/loudnova/apps/paymentops-site/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentops-website
  namespace: paymentops-site
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: paymentops-website
          image: ghcr.io/cloodnova/paymentops-website:146ef1928e5947402b2b713d2ccc89cbd5888085
